chore(update-deps): Fix spacing of playground title | mw

--- a/packages/shared/src/css/styles.css
+++ b/packages/shared/src/css/styles.css
@@ -61,10 +61,9 @@ a {
   font: 12px/16px 'Porsche Next';
   color: deeppink;
   text-align: left;
-  margin-bottom: 16px;
 }
 
-.playground:not([class*='auto-layout'])::before {
+.playground:not([class*='auto-layout']) .title {
   margin-bottom: 16px;
 }
 
